@@ -46,7 +46,7 @@
 
 \vspace{1cm}\par
 
-{\large Stand Mai 2007}
+{\large Stand August 2008}
 \end{raggedright}
 
 \clearpage
@@ -9573,6 +9573,12 @@ Angaben:
                 interpretiert werden, da sich Morola hier nicht festlegt.
                 AS w"ahlt die letztere Variante, was m"oglicherweise nicht
                 das erwartete ist.}
+               {keines}
+\errentry{ 300}{Bit-Nummer wird abgeschnitten werden}
+               {Warnung}
+               {Die Instruktion arbeitet nur auf Byte- bzw.
+                Langwort-Operanden, Bitnummern jenseits 7 bzw. 31 werden
+                von der CPU modulo-8 bzw. modulo-32 behandelt werden.}
                {keines}
 \errentry{1000}{Symbol doppelt definiert}
                {Fehler}
