@@ -39,9 +39,12 @@
 /*           2002-01-27 Build 19                                             */
 /*                                                                           */
 /*****************************************************************************/
-/* $Id: version.c,v 1.33 2008/06/22 11:01:12 alfred Exp $                     */
+/* $Id: version.c,v 1.34 2008/08/10 12:00:30 alfred Exp $                     */
 /***************************************************************************** 
  * $Log: version.c,v $
+ * Revision 1.34  2008/08/10 12:00:30  alfred
+ * 1.42 Bld60
+ *
  * Revision 1.33  2008/06/22 11:01:12  alfred
  * - 1.42 Bld59
  *
@@ -179,8 +182,8 @@
 #include "stdinc.h"
 #include <string.h>
 
-char *Version="1.42 Beta [Bld 59]";
-char *DebVersion = "1.42bld59-1";
+char *Version="1.42 Beta [Bld 60]";
+char *DebVersion = "1.42bld60-1";
 LongInt VerNo=0x142f;
 
 char *InfoMessCopyright="(C) 1992,2008 Alfred Arnold";
